<resources>
    <string name="app_name">EcoFind</string>
    <string name="about">About</string>
    <string name="map">Map</string>
    <string name="help">Help!</string>
    <string name="info">About</string>
    <string name="settings">Settings</string>
    <string name="EcoFind">EcoFind</string>
    <string name="logo">logo</string>
    <string name="camera">Camera</string>
    <string name="tools">Tools</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="status">Status</string>
    <string name="reports">Report</string>
    <string name="contactus">Contact Us</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="call">Call</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="How">How do I print my Animals\'s sensor Data?</string>
    <string name="go">Go to the Status page and download the report from there.</string>
    <string name="what">What is the monthly subscription fees?</string>
    <string name="who">Who is responsible for the heath of the animal?</string>
    <string name="we">We are just responsible for monitoring the health of the data not fot it\'s health.</string>
    <string name="cost">$12.99/month</string>
</resources>
